Fixed the cards issue of clipping under certain content

--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -25,17 +25,21 @@ body{
         background-clip: border-box;
         background-size:cover;
         background-position: center;
-        margin-bottom: 2rem;
+        /* margin-bottom: 2rem; */
         /* display: flex; */
         /* flex-direction: column; */
         height: 100%;
         min-height: 400px;
+  position: relative;
+  z-index: 0;
     }
     #contain{
         /* background-color: rgb(0, 0, 0); */
         /* width: 90%; */
         margin-right: auto;
         margin-left: auto;
+          position: relative;
+  z-index: 0;
     }
     #Nav{
         display: flex;
@@ -241,6 +245,8 @@ body{
         font-weight:500;
         justify-content: space-around;
         font-size: .9rem;
+          position: relative;
+  z-index: 0;
     }
     #first_movie h1{
         font-size: 2.2rem;
@@ -325,9 +331,17 @@ body{
     #tocontwus1:before{
         content: "🔬";
     }
+    #allbutpop{
+        display: flex;
+        flex-direction: column;
+          position: relative;
+  z-index: 0;
+        /* background-color: red; */
+    }
   .housedcontent {
-    z-index: 0;
+    z-index: 20;
     max-height: 200px;
+    position: relative;
     /* height: 1000px; */
   /* margin-top: 2rem; */
 }
@@ -336,22 +350,26 @@ body{
   color: white;
   margin-left: 3rem;
   margin-bottom: 0px;
+  margin-top: 0px;
   z-index: 1;
+  padding-bottom: 20px;
   position: relative;
+  max-height: 1px;
+  /* padding-bottom: 1rem; */
 }
 
 .contentcards {
   display: flex;
   flex-direction: row;
-  overflow-x: auto;
-  /* overflow-y: hidden; */
+  /* overflow-x: auto; */
+  overflow-y: visible;
   position: relative;
   gap: 1.2rem;
   padding: 0.1rem 3rem;
   scroll-behavior: smooth;
-  /* max-height: 180px; */
-  z-index: 0;
+  z-index: 5;
 }
+
 .contentcards::-webkit-scrollbar {
   display: none;  
 }
@@ -379,6 +397,8 @@ body{
     flex-direction: row;
     gap: 0px;
     margin-top: 10px;
+    position: relative;
+    z-index: 9999;
 }
 .rankings{
     /* background-color: purple !important; */
@@ -408,18 +428,18 @@ body{
     /* background-color: blue; */
     /* position:static ; */
   transform: scale(1.3);
-  
   z-index: 99999999999;
   height: fit-content;
-  background-color: rgb(29, 29, 29);
+  background-color: rgb(255, 0, 0);
   /* background-color: red;   */
   /* position: absolute; */
   /* left: 50; */
 }
 .thecontent:focus-within .torank{
     /* background-color: green !important; */
-    margin-top: 2.4rem;
+    /* margin-top: 2.4rem; */
 }
+
 .Cardposter_popular {
     display: flex;
     justify-content: center;
